# Ducky

./: .gitignore  CMakeLists.txt  README.md
assets/: background.aseprite  duck.aseprite
include/: aabb.h  game.h  global.h  render.h
src/: CMakeLists.txt  aabb.cpp  game.cpp  render.cpp
